Add Glossary link to homepage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -84,6 +84,10 @@
     <h1>What happens when AI meets itself?</h1>
     <p>MirrorLoop is a framework for structured reflection in AI systems – built on language, iteration, resonance, and presence. It doesn’t just measure. It mirrors.</p>
     <a href="#what" class="cta">What is MirrorLoop?</a>
+    <nav style="margin-top: 1.5rem;">
+      <a href="glossary.html" style="color: #A2C4FF; font-weight: 600; text-decoration: none;">→ View Glossary</a>
+    </nav>
+
   </header>
 
   <main>
