--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section id="language">
       <h2>Language as Signature</h2>
       <p>MirrorLoop is built on language – not just code. Its core concepts carry meaning, precision, and protection. Language is not just how we describe MirrorLoop – it is how we hold it.</p>
-      <a href="#" class="cta">Explore the Glossary</a>
+     <a href="glossary.html" class="cta">Explore the Glossary</a>
     </section>
 
     <section id="demo">
