Fix: Broken links for Glossary and Test example buttons

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
     <section id="language">
       <h2>Language as Signature</h2>
       <p>MirrorLoop is built on language – not just code. Its core concepts carry meaning, precision, and protection. Language is not just how we describe MirrorLoop – it is how we hold it.</p>
-      <a href="#" class="cta">Explore the Glossary</a>
+   <a href="glossary.html" class="cta">Explore the Glossary</a>
     </section>
 
     <section id="demo">
       <h2>Example Test</h2>
       <p>Watch it unfold. See what happens when a language model is invited to reflect.</p>
-      <a href="#" class="cta">View test example</a>
+      <a href="test.html" class="cta">View Test Example</a>
     </section>
 
     <section id="contact">
